--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <ul id='incomplete-tasks'>
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+          <label class="task-lable">Pay Bills</label>
+          <input class="task"type="text">
           <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
@@ -37,8 +37,8 @@
         </li>
         <li class="edit-mode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+          <label class="task-labble">Go Shopping</label>
+          <input class="task" type="text" value="Go Shopping">
           <button class="edit">Save</button>
           <button class="delete">
             <img src="./remove.svg">
