--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <p id="additem">
         <label for="new-task">Add Item</label>
         <div class="task-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input class="task" id="new-task" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id='incomplete-tasks'>
-        <li>
+      <ul class="add-todo" id='incomplete-tasks'>
+        <li class="task-li">
           <input type="checkbox">
           <label class="task-lable">Pay Bills</label>
           <input class="task"type="text">
@@ -46,8 +46,8 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
+      <ul class="completed" id="completed-tasks">
+        <li class="task-li">
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
