--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
           charset="utf-8">
   </head>
   <body>
-    <div class="header-container">
+    <header class="header-container">
       <img src="./eisenhower-matrix.jpg">
       <a class='more-inf' 
         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
       </a>
-    </div>
-    <div class="main-container">
+    </header>
+    <main class="main-container">
       <p id="additem">
         <label for="new-task">Add Item</label>
         <div class="task-wrapper">
@@ -57,7 +57,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
